Improved the workflow by switching to pull_request and no longer persisting the checkout credentials.

--- a/.github/workflows/scriptAnalyzer.yaml
+++ b/.github/workflows/scriptAnalyzer.yaml
@@ -1,7 +1,7 @@
 name: PSScriptAnalyzer
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - master
     paths:
@@ -21,7 +21,9 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
+        with:
+          persist-credentials: false
       - name: Install PSScriptAnalyzer
         run: |
           Install-Module -Name PSScriptAnalyzer -Force -SkipPublisherCheck -Scope CurrentUser
