--- a/manifests/s/stescobedo92/apppass/1.0.0/stescobedo92.apppass.yaml
+++ b/manifests/s/stescobedo92/apppass/1.0.0/stescobedo92.apppass.yaml
@@ -1,28 +1,5 @@
-# Created using wingetcreate 1.10.3.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.singleton.1.6.0.schema.json
-
 PackageIdentifier: stescobedo92.apppass
 PackageVersion: 1.0.0
-PackageLocale: en-US
-Publisher: stescobedo92
-PackageName: apppass
-PackageUrl: https://github.com/stescobedo92/apppass
-License: MIT
-ShortDescription: Generate secure passwords for your applications.
-Description: |
-  apppass is a powerful command-line application to generate and manage secure passwords.
-  It includes both a CLI console interface and an interactive TUI.
-Commands:
-- apppass
-Installers:
-- Architecture: x64
-  InstallerType: zip
-  NestedInstallerType: portable
-  NestedInstallerFiles:
-  - RelativeFilePath: apppass.exe
-    PortableCommandAlias: apppass
-  InstallerUrl: https://github.com/stescobedo92/apppass/releases/download/v1.0.0/apppass-x86_64-pc-windows-msvc.zip
-  InstallerSha256: f086e11f6ad4b3460f35d9c54d13aa42299abd7622b10d4dc739d16a77015c34
-  UpgradeBehavior: uninstallPrevious
-ManifestType: singleton
+DefaultLocale: en-US
+ManifestType: version
 ManifestVersion: 1.6.0
