Marked as "elevationRequired": Aida-Enna.GamebarHandler version 1.0.0.0

--- a/manifests/a/Aida-Enna/GamebarHandler/1.0.0.0/Aida-Enna.GamebarHandler.installer.yaml
+++ b/manifests/a/Aida-Enna/GamebarHandler/1.0.0.0/Aida-Enna.GamebarHandler.installer.yaml
@@ -12,5 +12,6 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://github.com/Aida-Enna/GamebarHandler/releases/download/1.0.0.0/GamebarHandler.zip
   InstallerSha256: BD4E0B7EEBD3B42E52583982B17414962220C1FA8D516500B29A91FC973C6453
+ElevationRequirement: elevationRequired  
 ManifestType: installer
 ManifestVersion: 1.10.0
