--- a/manifests/k/KDE/ISOImageWriter/1.0.0/KDE.ISOImageWriter.installer.yaml
+++ b/manifests/k/KDE/ISOImageWriter/1.0.0/KDE.ISOImageWriter.installer.yaml
@@ -8,6 +8,7 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://download.kde.org/Attic/isoimagewriter/1.0.0/isoimagewriter-1.0.0.exe
   InstallerSha256: 467AEFA7A893B323932C858C8BC6F3B6574C8D6F830E48E140D13941787393C6
+ElevationRequirement: elevationRequired
 FileExtensions:
 - iso
 - bin
