--- a/manifests/k/KDE/Tokodon/6074/KDE.Tokodon.installer.yaml
+++ b/manifests/k/KDE/Tokodon/6074/KDE.Tokodon.installer.yaml
@@ -7,5 +7,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://cdn.kde.org/ci-builds/network/tokodon/master/windows/tokodon-master-6074-windows-cl-msvc2022-x86_64.exe
   InstallerSha256: 5828FB4ED46DA4C5D7B05E83455F6D1F0B51F9105414E29E068D7C99BC6906F9
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
