--- a/manifests/g/gnome/gtkmm/2.22.0-2/gnome.gtkmm.installer.yaml
+++ b/manifests/g/gnome/gtkmm/2.22.0-2/gnome.gtkmm.installer.yaml
@@ -11,5 +11,6 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://download.gnome.org/binaries/win32/gtkmm/2.22/gtkmm-win32-devel-2.22.0-2.exe
   InstallerSha256: 3c37f692aaab9ce78ba82d34b38eed7de659c97deee08330ec7a866a93f0beb9
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
