--- a/manifests/m/MarkusSchwenk/MidiEditor/3.3.2/MarkusSchwenk.MidiEditor.installer.yaml
+++ b/manifests/m/MarkusSchwenk/MidiEditor/3.3.2/MarkusSchwenk.MidiEditor.installer.yaml
@@ -11,5 +11,6 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://github.com/markusschwenk/midieditor/releases/download/3.3.2/MidiEditor-3.3.2-Setup.exe
   InstallerSha256: B796B08F6D99BFCF39D17FC0201FF75A9D714E4224CAA2D7B12CBD0F3AB3C7B7
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
