--- a/manifests/m/Microsoft/DotNet/Runtime/2_2/2.2.8.28209/Microsoft.DotNet.Runtime.2_2.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Runtime/2_2/2.2.8.28209/Microsoft.DotNet.Runtime.2_2.installer.yaml
@@ -32,5 +32,6 @@ Installers:
 InstallerSuccessCodes:
 - -2147450751
 - -4294967285
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
