--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.installer.yaml
@@ -16,5 +16,6 @@ Installers:
   InstallerSha256: C0CA2E0C9CD18A24A0A77369A13FAE2C2C4E8BC83355DD24E5DDC00F9D791FE3
 UnsupportedOSArchitectures:
 - x64
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
