--- a/manifests/b/Besware/Artweaver/8/Plus/8.1.2.3675/Besware.Artweaver.8.Plus.locale.en-US.yaml
+++ b/manifests/b/Besware/Artweaver/8/Plus/8.1.2.3675/Besware.Artweaver.8.Plus.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: Besware.Artweaver.8.Plus
-PackageVersion: 8.1.1.3587
+PackageVersion: 8.1.2.3675
 PackageLocale: en-US
 Publisher: Besware
 PublisherUrl: https://www.besware.de/
@@ -13,7 +13,7 @@ PackageName: Artweaver Plus 8
 PackageUrl: https://www.artweaver.de/en/
 License: Proprietary
 LicenseUrl: https://www.artweaver.de/en/license
-Copyright: © 2025 Besware. All rights reserved.
+Copyright: © 2026 Besware. All rights reserved.
 CopyrightUrl: https://www.artweaver.de/en/license
 ShortDescription: Full-featured painting tool with a huge set of predefined realistic brushes to paint creatively or just experiment. Artweaver is suitable for beginners and advanced users.
 Description: |-
@@ -48,18 +48,14 @@ Tags:
 - painting
 - sketching
 ReleaseNotes: |-
-  This version includes the following improvements and fixes
-  - Improved events playback
-  - Improved fitting document on screen
-  - Improved mirror painting quality
-  - Improved brush tool reset
-  - Improved text editing
-  - Fixed error when saving WebP documents
-  - Fixed error when showing font selector
-ReleaseNotesUrl: https://www.artweaver.de/en/help/272
+  This version includes the following fixes
+  - Fixed occasional hangs when showing dialog
+  - Fixed error when closing
+  - Fixed restoring on wrong monitor
+ReleaseNotesUrl: https://www.artweaver.de/en/help/273
 PurchaseUrl: https://www.artweaver.de/en/buy
 Documentations:
 - DocumentLabel: Documentation
   DocumentUrl: https://documentation.artweaver.de/8/en/
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
