--- a/manifests/g/GarudaLinux/FireDragon/12.7.0/GarudaLinux.FireDragon.installer.yaml
+++ b/manifests/g/GarudaLinux/FireDragon/12.7.0/GarudaLinux.FireDragon.installer.yaml
@@ -14,5 +14,6 @@ Installers:
 - Architecture: arm64
   InstallerUrl: https://gitlab.com/garuda-linux/firedragon/firedragon12/-/releases/v12.7.0/downloads/firedragon-win32-arm64.exe
   InstallerSha256: 9999cd3dc14d8679051699b4aef3fc67865c9d0ccfa7e5ccc2b678d830687893
+ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.12.0
