Update ShortDescription for HMCL package in Chinese

--- a/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.locale.zh-CN.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.locale.zh-CN.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: HMCL.HMCL.Stable.CNB
 PackageVersion: 3.9.1
 PackageLocale: zh-CN
 PackageName: Hello Minecraft! Launcher 稳定版
-ShortDescription: 一款功能多样、跨平台且热门的 Minecraft 启动器
+ShortDescription: 一个多功能、跨平台且广受欢迎的 Minecraft 启动器
 ReleaseNotes: |-
   - 启动器
     - GP-4837: 实验性支持阿拉伯语 (by Hommam-Prom)
