Modify: HMCL.HMCL.Dev version 3.10.0.317

--- a/manifests/h/HMCL/HMCL/Dev/3.10.0.317/HMCL.HMCL.Dev.installer.yaml
+++ b/manifests/h/HMCL/HMCL/Dev/3.10.0.317/HMCL.HMCL.Dev.installer.yaml
@@ -6,6 +6,7 @@ PackageVersion: 3.10.0.317
 InstallerType: portable
 Commands:
 - hmcl-dev
+ReleaseDate: 2026-01-11
 Installers:
 - Architecture: neutral
   InstallerUrl: https://github.com/HMCL-dev/HMCL/releases/download/v3.10.0.317/HMCL-3.10.0.317.exe
