--- a/manifests/h/HMCL/HMCL/Dev/CNB/3.10.0.317/HMCL.HMCL.Dev.CNB.locale.en-US.yaml
+++ b/manifests/h/HMCL/HMCL/Dev/CNB/3.10.0.317/HMCL.HMCL.Dev.CNB.locale.en-US.yaml
@@ -10,15 +10,15 @@ PublisherSupportUrl: https://github.com/HMCL-dev/HMCL/issues
 PackageName: Hello Minecraft! Launcher Dev
 PackageUrl: https://github.com/HMCL-dev/HMCL
 License: GPL-3.0
+LicenseUrl: https://github.com/HMCL-dev/HMCL/blob/HEAD/LICENSE
 Copyright: Copyright (C) 2026 huangyuhui
 ShortDescription: A Minecraft Launcher which is multi-functional, cross-platform and popular
 Tags:
 - javafx
 - minecraft
 - minecraft-launcher
-ReleaseNotesUrl: https://docs.hmcl.net/changelog/dev.html#HMCL-3.10.0.317
 Documentations:
 - DocumentLabel: Documentation
-  DocumentUrl: https://docs.hmcl.net
+  DocumentUrl: https://docs.hmcl.net/
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
