--- a/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.installer.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.installer.yaml
@@ -1,14 +1,15 @@
-# Created using wingetcreate 1.10.3.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
+# Created with YamlCreate.ps1 Dumplings Mod
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: HMCL.HMCL.Stable.CNB
 PackageVersion: 3.9.1
 InstallerType: portable
 Commands:
 - hmcl-stable
+ReleaseDate: 2025-12-21
 Installers:
 - Architecture: neutral
-  InstallerUrl: https://github.com/HMCL-dev/HMCL/releases/download/v3.9.1/HMCL-3.9.1.exe
-  InstallerSha256: 2483cb4a1e516ce254ce5a21bced352d38344c56ef4654efbcdcd796a21c466d
+  InstallerUrl: https://cnb.cool/HMCL-dev/HMCL/-/releases/download/v3.9.1/HMCL-3.9.1.exe
+  InstallerSha256: 2483CB4A1E516CE254CE5A21BCED352D38344C56EF4654EFBCDCD796A21C466D
 ManifestType: installer
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
