--- a/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.locale.en-US.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/CNB/3.9.1/HMCL.HMCL.Stable.CNB.locale.en-US.yaml
@@ -1,5 +1,5 @@
-# Created using wingetcreate 1.10.3.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# Created with YamlCreate.ps1 Dumplings Mod
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: HMCL.HMCL.Stable.CNB
 PackageVersion: 3.9.1
@@ -21,4 +21,4 @@ Documentations:
 - DocumentLabel: Documentation
   DocumentUrl: https://docs.hmcl.net
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
