--- a/manifests/s/SpaceTime/Sheas-Cealer/1.1.4/SpaceTime.Sheas-Cealer.installer.yaml
+++ b/manifests/s/SpaceTime/Sheas-Cealer/1.1.4/SpaceTime.Sheas-Cealer.installer.yaml
@@ -4,6 +4,9 @@
 PackageIdentifier: SpaceTime.Sheas-Cealer
 PackageVersion: 1.1.4
 InstallerType: inno
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.8
 ProductCode: '{4C3B06A9-9B5A-494E-A5A8-BC1B1B5465DC}_is1'
 ReleaseDate: 2024-12-22
 Installers:
