--- a/manifests/s/skssmd/Graft/2.2.1/skssmd.Graft.locale.en-US.yaml
+++ b/manifests/s/skssmd/Graft/2.2.1/skssmd.Graft.locale.en-US.yaml
@@ -30,6 +30,17 @@ Tags:
 - ssh
 - hosting
 - cloud
+ReleaseNotes: >-
+  - Cloudflare API Integration: Automated DNS zone mapping based on Traefik host labels.
+  - Cloudflare Zone Registry: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
+  - Database Backup Automation: Easily backup infrastructure databases to S3/R2 (Experimental).
+  - Rollback to versions: Easily rollback and revert changes to previous deployments.
+  - Optimized for Git and GitHub Actions CI/CD flows.
+  - Improved domain detection.
+  - Duplicate record handling.
+  - Ghcr image linking.
+  - Boilerplate service priority guidelines.
+  - Webhook detection and error handling.
 ReleaseNotesUrl: https://github.com/skssmd/Graft/releases/tag/v2.2.1
 InstallationNotes: "Please restart your terminal to ensure the 'graft' command is available in your PATH.   IMPORTANT: To set up your host, please use a clean and fresh server. Graft automatically configures Docker, reverse proxies (Traefik), and load balancers, which may conflict with existing manual setups."
 Documentations:
@@ -37,3 +48,4 @@ Documentations:
   DocumentUrl: https://github.com/skssmd/Graft/blob/main/COMMANDS.md
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
