--- a/manifests/l/lbjlaq/AntigravityTools/3.3.21/lbjlaq.AntigravityTools.yaml
+++ b/manifests/l/lbjlaq/AntigravityTools/3.3.21/lbjlaq.AntigravityTools.yaml
@@ -3,6 +3,6 @@
 
 PackageIdentifier: lbjlaq.AntigravityTools
 PackageVersion: 3.3.21
-DefaultLocale: en-US
+DefaultLocale: zh-CN
 ManifestType: version
 ManifestVersion: 1.12.0
