--- a/manifests/h/HypixelStudios/Hytale/2026.01.11-b022ef5/HypixelStudios.Hytale.locale.en-US.yaml
+++ b/manifests/h/HypixelStudios/Hytale/2026.01.11-b022ef5/HypixelStudios.Hytale.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2026.01.11-b022ef5
 PackageLocale: en-US
 Publisher: Hypixel Studios Canada inc.
 PublisherUrl: https://hytale.com/
-PublisherSupportUrl: https://support.hytale.com/hc/en-us
+# PublisherSupportUrl: https://support.hytale.com/hc/en-us
 PrivacyUrl: https://hytale.com/privacy
 Author: Hypixel Studios
 PackageName: Hytale Launcher
