--- a/manifests/c/CoenFin/MT940Creator/2.10/CoenFin.MT940Creator.installer.yaml
+++ b/manifests/c/CoenFin/MT940Creator/2.10/CoenFin.MT940Creator.installer.yaml
@@ -6,6 +6,7 @@ PackageVersion: "2.10"
 InstallerType: inno
 Scope: machine
 ProductCode: '{F77AEFEE-41B8-4715-AE39-F8B16C5AF256}_is1'
+ReleaseDate: 2026-01-11
 Installers:
 - Architecture: x64
   InstallerUrl: https://coenfin.nl/bestanden/software/MT940Creatorsetup64bits.exe
