Update: Waytech.CloudDrive2 version 1.0 (0.9.22)

--- a/manifests/w/Waytech/CloudDrive2/1.0/Waytech.CloudDrive2.locale.zh-CN.yaml
+++ b/manifests/w/Waytech/CloudDrive2/1.0/Waytech.CloudDrive2.locale.zh-CN.yaml
@@ -30,7 +30,7 @@ Tags:
 ReleaseNotes: |-
   1. 增加 aws S3 及兼容 S3 API 的对象存储支持
   2. 其它性能优化
-ReleaseNotesUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/tag/0.9.22
+ReleaseNotesUrl: https://github.com/cloud-fs/cloud-fs.github.io/releases/tag/v0.9.22
 PurchaseUrl: https://www.clouddrive2.com/pricing.html
 ManifestType: locale
 ManifestVersion: 1.12.0
