--- a/manifests/e/ECSoftware/SnipSVG/2.1.0/ECSoftware.SnipSVG.locale.en-US.yaml
+++ b/manifests/e/ECSoftware/SnipSVG/2.1.0/ECSoftware.SnipSVG.locale.en-US.yaml
@@ -25,7 +25,30 @@ Tags:
 - capture
 - screenshot
 - svg
-ReleaseNotesUrl: https://www.helpandmanual.com/news/
+ReleaseNotes: |-
+  We are happy to announce the first software update for 2026: SnipSVG version 2.1!
+  What’s new in SnipSVG 2.1?
+  The biggest change in this update is a syntax highlighter for source code examples. Our documentation tool Help+Manual has long offered syntax highlighting features. Now SnipSVG has the same functionality, for images.
+  If you are asking: “Source code snippets as images, seriously? A code snippet in technical documentation should be text, in order to enable users to copy and paste them“. Yes, we are serious and suggest to create images from your source code examples. SVG images, that is. Because in SVG, text stays text, and the image remains editable after publishing.
+
+  Advantages of source code snippets as images:
+  - The code snippets stand out and simply look better. In an image, you can add backgrounds, boxes, even editor window mockups and additional annotations.
+  - With the built-in syntax highlighter, the code examples are formatted like most modern code editors do. This enhances readability.
+  - In SVG format, the text is selectable and the image stays editable with SnipSVG.
+  - You can use these code snippet images on any HTML page, including your website.
+
+  The syntax highlighter is a new button in the Text Format section. It currently has 19 programming languages built-in and you can configure the text format and text colors for each of them separately. The highlighter is able to format text for light and dark backgrounds (with a default text color of black and white, respectively).
+
+  Other Changes in SnipSVG 2.1
+  - Forced Save-As for PNG/JPEG/GIF removed: when opening, modifying and saving a PNG/JPEG/GIF image, SnipSVG always prompted with a Save-As dialog box when saving the changes, to encourage saving the image as SVG. This forced save-as has been removed, a simple “Save” command saves the picture in the original format.
+  - Callout shapes with shadow: if a callout shape had more than 1 pointer, pointing left and right of the callout, the shadow was truncated.
+  - Zoom shortcuts [+] [-] [0] and [1] are now also supported by the numeric keypad on Windows.
+  - The auto-size function now calculates shadows with full integer pixels to avoid interpolation of images. When opening, for example, a PNG image and applying a shadow to it, the picture part (excluding shadow) might have been slightly interpolated in the result, because it was auto-positioned on sub-pixels. Auto-size now calculates integer pixels for the shadow size, resulting in an integer pixel position for the picture part.
+  - Windows setup recognizes the SnipSVG installation that comes with Help+Manual 10 and asks to update it. You can safely use the Windows installer to update SnipSVG in Help+Manual.
+
+  Download
+  All downloads for Windows and macOS are available from the SnipSVG website.
+ReleaseNotesUrl: https://www.helpandmanual.com/news/2026/01/snipsvg-2-1-released-syntax-highlighter-for-code-snippets/
 Documentations:
 - DocumentLabel: Documentation
   DocumentUrl: https://www.helpandmanual.com/help/
