Add ReleaseNotes (en-US)

--- a/manifests/a/ADInstruments/LabChart/Module/PVLoop/2.6.1400/ADInstruments.LabChart.Module.PVLoop.locale.en-US.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/PVLoop/2.6.1400/ADInstruments.LabChart.Module.PVLoop.locale.en-US.yaml
@@ -11,5 +11,6 @@ License: Proprietary
 Copyright: Copyright © 1994-2026 ADInstruments
 ShortDescription: The Pressure Volume Loop Analysis Module extends LabChart to provide the detection and analysis of ventricular pressure and volume data.
 Description: The Pressure Volume Loop Analysis Module extends LabChart to provide the detection and analysis of ventricular pressure and volume data. The module calculates and displays a wide range of cardiac function parameters, relationships and plots. The module can be used to analyze pre-recorded data or to analyze data as it is sampled.
+ReleaseNotes: '- Improve PV Loop workflow layout for non-English regional settings'
 ManifestType: defaultLocale
 ManifestVersion: 1.12.0
