--- a/manifests/c/Clockify/Clockify/2.1.1/Clockify.Clockify.locale.en-US.yaml
+++ b/manifests/c/Clockify/Clockify/2.1.1/Clockify.Clockify.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: Clockify.Clockify
-PackageVersion: 2.1.0
+PackageVersion: 2.1.1
 PackageLocale: en-US
 Publisher: COING Inc.
 PublisherUrl: https://clockify.me/
@@ -13,7 +13,7 @@ PackageName: Clockify
 PackageUrl: https://clockify.me/windows-time-tracking
 License: Proprietary
 LicenseUrl: https://cake.com/terms
-Copyright: © Clockify 2025 by CAKE.com Inc.
+Copyright: © Clockify 2026 by CAKE.com Inc.
 CopyrightUrl: https://cake.com/terms
 ShortDescription: A time tracker and timesheet app that lets you track work hours across projects.
 Moniker: clockify
@@ -22,14 +22,10 @@ Tags:
 - timer
 - tracker
 - work
-ReleaseNotes: |-
-  - UI Improvement: The main time-tracker window has been redesigned to be more intuitive and user-friendly.
-  - UX Improvement: Description is preserved when switching between Timer, Manual and Break modes.
-  - Fix: Auto tracker items cannot be deleted while recording is active.
-  - Fix: Clicking the Clockify system tray icon always brings the app to the front.
+ReleaseNotes: '- Share feedback form: Users can now submit feedback directly from the application.'
 ReleaseNotesUrl: https://clockify.me/help/whats-new
 Documentations:
 - DocumentLabel: Tutorials
   DocumentUrl: https://clockify.me/tutorials
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
