Add x64 and arm64 installers

--- a/manifests/o/Obsidian/Obsidian/1.11.4/Obsidian.Obsidian.installer.yaml
+++ b/manifests/o/Obsidian/Obsidian/1.11.4/Obsidian.Obsidian.installer.yaml
@@ -30,5 +30,31 @@ Installers:
   InstallerSwitches:
     Custom: /allusers
   ElevationRequirement: elevatesSelf
+- Architecture: x64
+  Scope: user
+  InstallerUrl: https://github.com/obsidianmd/obsidian-releases/releases/download/v1.11.4/Obsidian-1.11.4.exe
+  InstallerSha256: 94EA213B7FA3FE0F26E5B3C3F8C7D1A43B1FC4E7DC3948DAC67B805B976312CD
+  InstallerSwitches:
+    Custom: /currentuser
+- Architecture: x64
+  Scope: machine
+  InstallerUrl: https://github.com/obsidianmd/obsidian-releases/releases/download/v1.11.4/Obsidian-1.11.4.exe
+  InstallerSha256: 94EA213B7FA3FE0F26E5B3C3F8C7D1A43B1FC4E7DC3948DAC67B805B976312CD
+  InstallerSwitches:
+    Custom: /allusers
+  ElevationRequirement: elevatesSelf
+- Architecture: arm64
+  Scope: user
+  InstallerUrl: https://github.com/obsidianmd/obsidian-releases/releases/download/v1.11.4/Obsidian-1.11.4.exe
+  InstallerSha256: 94EA213B7FA3FE0F26E5B3C3F8C7D1A43B1FC4E7DC3948DAC67B805B976312CD
+  InstallerSwitches:
+    Custom: /currentuser
+- Architecture: arm64
+  Scope: machine
+  InstallerUrl: https://github.com/obsidianmd/obsidian-releases/releases/download/v1.11.4/Obsidian-1.11.4.exe
+  InstallerSha256: 94EA213B7FA3FE0F26E5B3C3F8C7D1A43B1FC4E7DC3948DAC67B805B976312CD
+  InstallerSwitches:
+    Custom: /allusers
+  ElevationRequirement: elevatesSelf
 ManifestType: installer
 ManifestVersion: 1.10.0
