Added 2 additional tags.

--- a/manifests/i/IgorPavlov/7-max/24.01/IgorPavlov.7-max.locale.en-US.yaml
+++ b/manifests/i/IgorPavlov/7-max/24.01/IgorPavlov.7-max.locale.en-US.yaml
@@ -16,5 +16,7 @@ Tags:
 - randomaccessmemorypages
 - random-access-memory-pages
 - exe-wrapper
+- largepagesupport
+- large-page-support
 ManifestType: defaultLocale
 ManifestVersion: 1.12.0
