--- a/manifests/i/IgorPavlov/7-max/24.01/IgorPavlov.7-max.locale.en-US.yaml
+++ b/manifests/i/IgorPavlov/7-max/24.01/IgorPavlov.7-max.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageLocale: en-US
 Publisher: Igor Pavlov
 PackageName: 7-max
 PackageUrl: https://7-max.com
-License: Unclear (Freeware)
+License: LGPL
 Copyright: © 2003-2024 Igor Pavlov
 ShortDescription: Windows uses small (4 KB) RAM pages by default. If you run any application with 7-max, that application will use large (2 MB) RAM pages. And some programs work faster, if they use large RAM pages instead of small pages.
 Tags:
