--- a/manifests/w/WHONET/WHONET/25.13.12/WHONET.WHONET.locale.en-US.yaml
+++ b/manifests/w/WHONET/WHONET/25.13.12/WHONET.WHONET.locale.en-US.yaml
@@ -31,5 +31,9 @@ Tags:
 - Microbiology
 - Resistance
 - WHO
+ReleaseNotes: |-
+  Fixes an issue with organism code mapping in BacLink.
+ReleaseNotesUrl: https://whonet.org/WHONET-ReleaseNotes.html
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
