--- a/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.fr.yaml
+++ b/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.fr.yaml
@@ -2,11 +2,8 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Betterbird.Betterbird
-PackageVersion: 140.6.0
-PackageLocale: zh-CN
-ShortDescription: Betterbird 是 Mozilla Thunderbird 的一个分支，具有额外功能和错误修复。
-Tags:
-- 电子邮件
-- 邮件
+PackageVersion: 140.7.0
+PackageLocale: fr
+ShortDescription: Betterbird est un fork de Mozilla Thunderbird avec des fonctionnalités et des corrections de bogues supplémentaires.
 ManifestType: locale
 ManifestVersion: 1.12.0
