--- a/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.it.yaml
+++ b/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.it.yaml
@@ -2,8 +2,8 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Betterbird.Betterbird
-PackageVersion: 140.6.0
-PackageLocale: es-AR
-ShortDescription: Betterbird es una bifurcación de Mozilla Thunderbird con funciones y correcciones de errores adicionales.
+PackageVersion: 140.7.0
+PackageLocale: it
+ShortDescription: Betterbird è un fork di Mozilla Thunderbird con funzioni e correzioni di bug aggiuntive.
 ManifestType: locale
 ManifestVersion: 1.12.0
