--- a/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.nl.yaml
+++ b/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.nl.yaml
@@ -2,8 +2,8 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Betterbird.Betterbird
-PackageVersion: 140.6.0
-PackageLocale: it
-ShortDescription: Betterbird è un fork di Mozilla Thunderbird con funzioni e correzioni di bug aggiuntive.
+PackageVersion: 140.7.0
+PackageLocale: nl
+ShortDescription: Betterbird is een afsplitsing van Mozilla Thunderbird met extra functies en bugfixes.
 ManifestType: locale
 ManifestVersion: 1.12.0
