--- a/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.pt-BR.yaml
+++ b/manifests/b/Betterbird/Betterbird/140.7.0/Betterbird.Betterbird.locale.pt-BR.yaml
@@ -2,8 +2,8 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Betterbird.Betterbird
-PackageVersion: 140.6.0
-PackageLocale: de
-ShortDescription: Betterbird ist eine Variante (Fork) von Mozilla Thunderbird, der zusätzliche Features und Bugfixes enthält.
+PackageVersion: 140.7.0
+PackageLocale: pt-BR
+ShortDescription: Betterbird é um fork do Mozilla Thunderbird com recursos e correções de bugs adicionais.
 ManifestType: locale
 ManifestVersion: 1.12.0
