--- a/manifests/m/M-Igashi/headroom/1.2.0/M-Igashi.headroom.installer.yaml
+++ b/manifests/m/M-Igashi/headroom/1.2.0/M-Igashi.headroom.installer.yaml
@@ -12,5 +12,8 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/M-Igashi/headroom/releases/download/v1.2.0/headroom-v1.2.0-windows-x86_64.zip
   InstallerSha256: 4E1366D92C4242F4379C6BCE3BD0C7286C08684C4E28C93EE35876D5476924C0
+  Dependencies:
+    PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 ManifestType: installer
 ManifestVersion: 1.12.0
