Update version: afonsojramos.discrakt version 3.4.0

--- a/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.installer.yaml
+++ b/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.installer.yaml
@@ -1,17 +1,25 @@
+# Created with komac v2.14.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: afonsojramos.discrakt
 PackageVersion: 3.4.0
-MinimumOSVersion: 10.0.0.0
-InstallerType: msi
+InstallerLocale: und
+InstallerType: wix
 Scope: user
 InstallModes:
-  - silent
-  - silentWithProgress
+- silent
+- silentWithProgress
 UpgradeBehavior: install
+ProductCode: '{BEE6B976-62B2-4B0D-8485-44C87B00191D}'
+ReleaseDate: 2026-01-08
+AppsAndFeaturesEntries:
+- ProductCode: '{BEE6B976-62B2-4B0D-8485-44C87B00191D}'
+  UpgradeCode: '{8B55A0B3-6E9D-4A7C-B1F2-3C8E5D6F7A9B}'
+InstallationMetadata:
+  DefaultInstallLocation: '%LocalAppData%\Discrakt'
 Installers:
-  - Architecture: x64
-    InstallerUrl: https://github.com/afonsojramos/discrakt/releases/download/v3.4.0/Discrakt_3.4.0_win64.msi
-    InstallerSha256: 4ABAFD3ABA70F7492CB40CBF941BC02F945361806C62BE8951D082E93F500FCC
+- Architecture: x64
+  InstallerUrl: https://github.com/afonsojramos/discrakt/releases/download/v3.4.0/Discrakt_3.4.0_win64.msi
+  InstallerSha256: 4ABAFD3ABA70F7492CB40CBF941BC02F945361806C62BE8951D082E93F500FCC
 ManifestType: installer
 ManifestVersion: 1.10.0
