--- a/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.locale.en-US.yaml
+++ b/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.locale.en-US.yaml
@@ -1,3 +1,4 @@
+# Created with komac v2.14.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: afonsojramos.discrakt
@@ -5,17 +6,25 @@ PackageVersion: 3.4.0
 PackageLocale: en-US
 Publisher: afonsojramos
 PublisherUrl: https://github.com/afonsojramos
+PublisherSupportUrl: https://github.com/afonsojramos/discrakt/issues
 PackageName: Discrakt
 PackageUrl: https://github.com/afonsojramos/discrakt
 License: MIT
-LicenseUrl: https://github.com/afonsojramos/discrakt/blob/main/LICENSE
+LicenseUrl: https://github.com/afonsojramos/discrakt/blob/HEAD/LICENSE
 ShortDescription: Trakt to Discord Rich Presence
 Description: Discrakt bridges your Trakt.tv watching status to Discord Rich Presence. It runs silently in your system tray and automatically updates your Discord status when watching movies or TV shows tracked by Trakt.tv.
 Tags:
-  - discord
-  - trakt
-  - rich-presence
-  - plex
-  - media
+- discord
+- media
+- plex
+- rich-presence
+- trakt
+ReleaseNotes: |-
+  What's Changed
+  - feat: add retry logic with exponential backoff for API requests by @afonsojramos in #206
+  - chore(deps): bump lru from 0.13 to 0.16 by @afonsojramos in #208
+  - feat: implement one-click "magic link" authorization for CLI and Web by @maximedeprince in #205
+  Full Changelog: v3.3.0...v3.4.0
+ReleaseNotesUrl: https://github.com/afonsojramos/discrakt/releases/tag/v3.4.0
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
