--- a/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.installer.yaml
+++ b/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.installer.yaml
@@ -10,6 +10,9 @@ InstallModes:
 - silent
 - silentWithProgress
 UpgradeBehavior: install
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 ProductCode: '{BEE6B976-62B2-4B0D-8485-44C87B00191D}'
 ReleaseDate: 2026-01-08
 AppsAndFeaturesEntries:
@@ -23,3 +26,4 @@ Installers:
   InstallerSha256: 4ABAFD3ABA70F7492CB40CBF941BC02F945361806C62BE8951D082E93F500FCC
 ManifestType: installer
 ManifestVersion: 1.10.0
+
