--- a/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.locale.en-US.yaml
+++ b/manifests/a/afonsojramos/discrakt/3.4.0/afonsojramos.discrakt.locale.en-US.yaml
@@ -4,8 +4,8 @@
 PackageIdentifier: afonsojramos.discrakt
 PackageVersion: 3.4.0
 PackageLocale: en-US
-Publisher: afonsojramos
-PublisherUrl: https://github.com/afonsojramos
+Publisher: Afonso Jorge Ramos
+PublisherUrl: https://afonsojramos.me/
 PublisherSupportUrl: https://github.com/afonsojramos/discrakt/issues
 PackageName: Discrakt
 PackageUrl: https://github.com/afonsojramos/discrakt
@@ -13,18 +13,23 @@ License: MIT
 LicenseUrl: https://github.com/afonsojramos/discrakt/blob/HEAD/LICENSE
 ShortDescription: Trakt to Discord Rich Presence
 Description: Discrakt bridges your Trakt.tv watching status to Discord Rich Presence. It runs silently in your system tray and automatically updates your Discord status when watching movies or TV shows tracked by Trakt.tv.
+Moniker: discrakt
 Tags:
 - discord
-- media
+- discord-presence
 - plex
 - rich-presence
+- rust
 - trakt
 ReleaseNotes: |-
   What's Changed
-  - feat: add retry logic with exponential backoff for API requests by @afonsojramos in #206
-  - chore(deps): bump lru from 0.13 to 0.16 by @afonsojramos in #208
-  - feat: implement one-click "magic link" authorization for CLI and Web by @maximedeprince in #205
-  Full Changelog: v3.3.0...v3.4.0
+  - ci: add Winget Releaser workflow by @sitiom in #197
+  - chore(deps): bump tray-icon from 0.21.2 to 0.21.3 by @dependabot[bot] in #200
+  - chore(deps): bump serial_test from 3.2.0 to 3.3.1 by @dependabot[bot] in #199
+  - feat: multilingual support by @maximedeprince in #198
+  - fix: implement bounded LRU caching to prevent memory leaks by @afonsojramos in #203
+  - ci: pin winget-releaser to latest main commit by @afonsojramos in #204
+  Full Changelog: v3.2.2...v3.3.0
 ReleaseNotesUrl: https://github.com/afonsojramos/discrakt/releases/tag/v3.4.0
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
