Update manifest: Cyanfish.NAPS2 version 8.2.1
- Add installer entrance of arm64

Signed-off-by: ❤是纱雾酱哟～ <49941141+Dragon1573@users.noreply.github.com>

--- a/manifests/c/Cyanfish/NAPS2/8.2.1/Cyanfish.NAPS2.installer.yaml
+++ b/manifests/c/Cyanfish/NAPS2/8.2.1/Cyanfish.NAPS2.installer.yaml
@@ -24,5 +24,11 @@ Installers:
   AppsAndFeaturesEntries:
   - ProductCode: '{EA5731F3-8EA3-449A-8740-B706C48E87A1}'
     UpgradeCode: '{FEB82971-B3E6-4F19-9684-1D543E644D73}'
+- Architecture: arm64
+  InstallerType: inno
+  InstallerUrl: https://github.com/cyanfish/naps2/releases/download/v8.2.1/naps2-8.2.1-win-arm64.exe
+  InstallerSha256: 5CBB5ECB2B6F757BDD5F73FE0E87D3D11A9C09C6ED804A7CD889A9E53960A893
+  ProductCode: NAPS2 - Not Another PDF Scanner_is1
+  ElevationRequirement: elevatesSelf
 ManifestType: installer
 ManifestVersion: 1.10.0
