New version: Altova.MobileTogetherDesigner version 10.2.0.1 (#324912)

--- a/manifests/a/Altova/MobileTogetherDesigner/10.2.0.1/Altova.MobileTogetherDesigner.installer.yaml
+++ b/manifests/a/Altova/MobileTogetherDesigner/10.2.0.1/Altova.MobileTogetherDesigner.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: Altova.MobileTogetherDesigner
-PackageVersion: "10.2"
+PackageVersion: 10.2.0.1
 InstallerType: exe
 Scope: machine
 InstallModes:
@@ -29,52 +29,52 @@ Installers:
 - InstallerLocale: en
   Architecture: x86
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2.exe
-  InstallerSha256: B7064478EB1240721FBF80E65E54B422DC6A7D34D90202E7E49298E3EFA1A24B
-  ProductCode: '{F392E7D1-9837-480A-BDA9-F85FB35EC886}'
+  InstallerSha256: 21C9EAEA66B8E00E848F4CE62429BA1A77B821ADAE07013CD9A6EF512CD76035
+  ProductCode: '{08DF7879-17B5-4244-B120-3631BCA3829D}'
 - InstallerLocale: en
   Architecture: x64
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_x64.exe
-  InstallerSha256: 4382D508C49FEF1ED314650D708DC4C189F612490DDB0FDB31972E83EE7872D6
-  ProductCode: '{917734B4-0266-4761-BA36-51EF85811496}'
+  InstallerSha256: FBE932767302F0F3523B89506133D2CDA5D9224936E8A794E2981612A6A29F8B
+  ProductCode: '{BB70D2F9-5691-43FB-99D9-9F9E550615DF}'
 - InstallerLocale: de
   Architecture: x86
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_DE.exe
-  InstallerSha256: BEA5960D1CD8B89666FFAC017DD70883A65E4DC57ECECB143753097BD4656484
-  ProductCode: '{F392E7D1-9837-480A-BDA9-F85FB35EC886}'
+  InstallerSha256: F2BD077CE4E9F746F01A4E4D0BAED8659B6DF8D69D5584B0DD416FE4029C4A15
+  ProductCode: '{08DF7879-17B5-4244-B120-3631BCA3829D}'
 - InstallerLocale: de
   Architecture: x64
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_x64_DE.exe
-  InstallerSha256: 5B057F53CD1447551AEB8DE41401A4A2D3C60F9F62B62441E9C14C049731524A
-  ProductCode: '{917734B4-0266-4761-BA36-51EF85811496}'
+  InstallerSha256: F2131A07BAA38C457BDF820D7F7BD5AC73137318921BA9187C0F24D7756EEE53
+  ProductCode: '{BB70D2F9-5691-43FB-99D9-9F9E550615DF}'
 - InstallerLocale: es
   Architecture: x86
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_ES.exe
-  InstallerSha256: 9816C0B6EA7CB1BF1FEE1992B813DA686407F6796EDB0777B54634BFF969082B
-  ProductCode: '{F392E7D1-9837-480A-BDA9-F85FB35EC886}'
+  InstallerSha256: 5C4761E423C0DA3DEC9C29F4440A92BE1F79D43FE1DB4AC41B506852222EF865
+  ProductCode: '{08DF7879-17B5-4244-B120-3631BCA3829D}'
 - InstallerLocale: es
   Architecture: x64
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_x64_ES.exe
-  InstallerSha256: 423058F6F23332C8292298854F293708E3BCDBC64A3F74632B22F6355E6FD60F
-  ProductCode: '{917734B4-0266-4761-BA36-51EF85811496}'
+  InstallerSha256: 05378F99C26877871E1955C3A308B14F9959FECF7D8C6F54322D29BDB64F8CA1
+  ProductCode: '{BB70D2F9-5691-43FB-99D9-9F9E550615DF}'
 - InstallerLocale: fr
   Architecture: x86
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_FR.exe
-  InstallerSha256: 87E1C68DFCD28215A31120407D7A3515FEA6FE2D308E44A8FC1FA8DF2CE933E5
-  ProductCode: '{F392E7D1-9837-480A-BDA9-F85FB35EC886}'
+  InstallerSha256: F5D3E42618A01F81F41AA02AFAF807ABB986E86216AED25C036542D76E56995E
+  ProductCode: '{08DF7879-17B5-4244-B120-3631BCA3829D}'
 - InstallerLocale: fr
   Architecture: x64
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_x64_FR.exe
-  InstallerSha256: 18702614985CFA9940D4848725E109974A8EB9C48379599F2F5952C39476D89C
-  ProductCode: '{917734B4-0266-4761-BA36-51EF85811496}'
+  InstallerSha256: 4C20D3A1D3C6086656AD00F763A833E489AA31AB1B70B1C612D2900B6781B846
+  ProductCode: '{BB70D2F9-5691-43FB-99D9-9F9E550615DF}'
 - InstallerLocale: ja
   Architecture: x86
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_JP.exe
-  InstallerSha256: 322C18C9AF5DA0B6E5954B20AA6BD1F4A3999F68C6A84D42102647E70D7974AC
-  ProductCode: '{F392E7D1-9837-480A-BDA9-F85FB35EC886}'
+  InstallerSha256: D74298216B7CEAF3C16DEBCDF6C540C9D7F762072A56E0736C27739684E52607
+  ProductCode: '{08DF7879-17B5-4244-B120-3631BCA3829D}'
 - InstallerLocale: ja
   Architecture: x64
   InstallerUrl: https://cdn.sw.altova.com/MT_10.2/MobileTogetherDesigner_10.2_x64_JP.exe
-  InstallerSha256: A1D2C4AEE7CE0A1AED37E50A12BC13026D25F2777B17F29B06DC3826DC986DDA
-  ProductCode: '{917734B4-0266-4761-BA36-51EF85811496}'
+  InstallerSha256: B21EB19F6A3D41F895B31184719DDAE1D4CA78002730A057540E4DCEED86947D
+  ProductCode: '{BB70D2F9-5691-43FB-99D9-9F9E550615DF}'
 ManifestType: installer
 ManifestVersion: 1.10.0
