--- a/manifests/a/Altova/MobileTogetherDesigner/10.2.0.1/Altova.MobileTogetherDesigner.locale.en-US.yaml
+++ b/manifests/a/Altova/MobileTogetherDesigner/10.2.0.1/Altova.MobileTogetherDesigner.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: Altova.MobileTogetherDesigner
-PackageVersion: "10.2"
+PackageVersion: 10.2.0.1
 PackageLocale: en-US
 Publisher: Altova
 PublisherUrl: https://www.altova.com/
