--- a/manifests/a/Altova/MobileTogetherDesigner/10.2.0.1/Altova.MobileTogetherDesigner.locale.zh-CN.yaml
+++ b/manifests/a/Altova/MobileTogetherDesigner/10.2.0.1/Altova.MobileTogetherDesigner.locale.zh-CN.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Altova.MobileTogetherDesigner
-PackageVersion: "10.2"
+PackageVersion: 10.2.0.1
 PackageLocale: zh-CN
 License: 专有软件
 ShortDescription: 跨平台移动开发环境
