New version: Cjwdev.GroupManager.Free version 3.0.1 (#329348)

--- a/manifests/c/Cjwdev/GroupManager/Free/3.0.1/Cjwdev.GroupManager.Free.locale.zh-CN.yaml
+++ b/manifests/c/Cjwdev/GroupManager/Free/3.0.1/Cjwdev.GroupManager.Free.locale.zh-CN.yaml
@@ -1,20 +1,10 @@
-# Created with YamlCreate.ps1 v2.5.0 $debug=NVS1.CRLF.7-5-2.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
+# Created with YamlCreate.ps1 Dumplings Mod
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Cjwdev.GroupManager.Free
-PackageVersion: 1.8.0
+PackageVersion: 3.0.1
 PackageLocale: zh-CN
-# Publisher:
-# PublisherUrl:
-# PublisherSupportUrl:
-# PrivacyUrl:
-# Author:
-# PackageName:
-# PackageUrl:
 License: 免费软件
-# LicenseUrl:
-# Copyright:
-# CopyrightUrl:
 ShortDescription: 一款用户友好的应用程序，允许终端用户编辑他们在 Active Directory 中被指定为管理员的任何组的成员。
 Description: |-
   如果您曾在 Active Directory 中将用户设为安全组/通讯组的经理，可能注意到过"经理可更新成员列表"选项，该选项允许用户在此组中添加和移除成员。唯一的问题是，除了通过 Microsoft Outlook 外，用户实际上没有简便的方法来进行这些更改。
@@ -31,7 +21,6 @@ Description: |-
 
   免费版限制
   - 免费版适用于用户仅管理单个组的小型组织，或希望先试用再购买标准版的用户。它只能管理单个组（如果用户管理多个组，将显示警告且仅显示找到的第一个组），用户也无法更改任何程序选项（手动或通过组策略）或从其他域添加新成员。
-# Moniker:
 Tags:
 - active-directory
 - ad
@@ -39,10 +28,5 @@ Tags:
 - 用户
 - 用户账户
 - 组
-# ReleaseNotes:
-# ReleaseNotesUrl:
-# PurchaseUrl:
-# InstallationNotes:
-# Documentations:
 ManifestType: locale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
