--- a/manifests/c/Cjwdev/GroupManager/Free/3.0.1/Cjwdev.GroupManager.Free.locale.en-US.yaml
+++ b/manifests/c/Cjwdev/GroupManager/Free/3.0.1/Cjwdev.GroupManager.Free.locale.en-US.yaml
@@ -1,20 +1,17 @@
-# Created with YamlCreate.ps1 v2.5.0 $debug=NVS1.CRLF.7-5-2.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# Created with YamlCreate.ps1 Dumplings Mod
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: Cjwdev.GroupManager.Free
-PackageVersion: 1.8.0
+PackageVersion: 3.0.1
 PackageLocale: en-US
 Publisher: Cjwdev
 PublisherUrl: https://cjwdev.com/
 PublisherSupportUrl: https://cjwdev.com/Contact.html
-# PrivacyUrl:
 Author: Cjwdev Limited
 PackageName: Group Manager Free Edition
 PackageUrl: https://cjwdev.com/Software/GroupMan/Info.html
 License: Freeware
-# LicenseUrl:
-Copyright: Copyright © Cjwdev Ltd 2020
-# CopyrightUrl:
+Copyright: Copyright © Cjwdev Ltd 2026
 ShortDescription: A user friendly application that lets end users edit the members of any groups that they are assigned as the manager of in Active Directory.
 Description: |-
   If you have ever assigned a user as a manager of a security/distribution group in Active Directory, you may have noticed the option "Manager can update membership list" which grants the user permission to add and remove members from this group. The only problem with this is that there is no easy way for the user to actually make these changes, other than through Microsoft Outlook.
@@ -31,7 +28,6 @@ Description: |-
 
   Free Edition Limitations
   - The free edition is intended to be used by smaller organisations where users only manage a single group, or by anyone that wants to test the application out before purchasing the standard edition. It is only able to manage a single group (if the user is a manager of more than one group then a warning will appear and they will only see the first group found) and the user is also not able to change any of the program options (manually or via Group Policy) or add new members from other domains.
-# Moniker:
 Tags:
 - active-directory
 - ad
@@ -40,13 +36,18 @@ Tags:
 - user
 - user-account
 ReleaseNotes: |-
-  Option to add members from other domains and see which domain existing members are from (standard edition only)
-  Membership list in Edit Group Memebers window is no longer refreshed if you click to edit membership view settings but then click cancel
-  Exporting membership to CSV now also includes display name, domain, and disabled state
-  Display name column added to the "Multiple objects found" window
+  New GUI with dark theme
+  Managed groups are now cached between sessions so you don't have to wait for them to be discovered again each time the program is launched
+  Commonly used groups can now be "pinned" to the top of the list of managed groups
+  When adding new members to groups you will now see a summary of the new member (their full name etc) before they get added to the group
+  Added the option to limit searches for new members to only find results from a specific OU instead of the entire domain - this can only be set via Group Policy
+  Added support for SSL over LDAP (aka LDAPS), also only configurable via Group Policy
+  Added the option to view other types of group members that are not users, contacts, groups or computers (off by default but can be enabled in the settings menu)
+  Any group members from trusted domains that could not be resolved to a display name will now show up in the members list, although just as a SID (assuming you have the option to view "other" member types enabled)
+  Removed the Display Name column so now there is just one Name column but this can be configured via Group Policy to show the display name instead of common name
+  Changed default behavior to not expand the full list of nested groups that the user is a member of when searching for managed groups, instead it will only get the user's direct group membership. The old behavior can be enabled again in the settings window or via Group Policy
+  Fixed a bug that caused the error "objectSid item has already been added to dictionary" when searching for managed groups
+  Settings moved from the registry to JSON files stored here: %APPDATA%\Cjwdev\GroupManager
 ReleaseNotesUrl: https://cjwdev.com/Software/GroupMan/VersionHistory.txt
-# PurchaseUrl:
-# InstallationNotes:
-# Documentations:
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
