--- a/manifests/m/Microsoft/XMLNotepad/2.9.0.18/Microsoft.XMLNotepad.installer.yaml
+++ b/manifests/m/Microsoft/XMLNotepad/2.9.0.18/Microsoft.XMLNotepad.installer.yaml
@@ -3,24 +3,34 @@
 
 PackageIdentifier: Microsoft.XMLNotepad
 PackageVersion: 2.9.0.18
-InstallerType: zip
-NestedInstallerType: wix
-NestedInstallerFiles:
-- RelativeFilePath: XmlNotepadSetup.msi
-InstallerSwitches:
-  InstallLocation: APPINSTALLROOTDIR="<INSTALLPATH>"
 UpgradeBehavior: install
 FileExtensions:
 - xml
-ProductCode: '{3A2D46F9-AA8E-45DF-960C-A1C1B35DA69B}'
 ReleaseDate: 2026-01-09
-AppsAndFeaturesEntries:
-- Publisher: Lovett Software
-  ProductCode: '{3A2D46F9-AA8E-45DF-960C-A1C1B35DA69B}'
-  UpgradeCode: '{14C1B5E8-3198-4AF2-B4BC-351017A109D3}'
 Installers:
+- Platform:
+  - Windows.Desktop
+  - Windows.Universal
+  MinimumOSVersion: 10.0.17763.0
+  Architecture: neutral
+  InstallerType: msix
+  InstallerUrl: https://github.com/microsoft/XmlNotepad/releases/download/2.9.0.18/XmlNotepadPackage_2.9.0.18_AnyCPU.msixbundle
+  InstallerSha256: A744D50EFB9B4E4AE817AC4BC0D98F86AF5BB9FF9E7B7AB7BEA2C213F2335371
+  SignatureSha256: BA46030EFECEBA7AB66B7CD79AD2C59A88F253585E7C528EC4F3693B0218F792
+  PackageFamilyName: 43906ChrisLovett.XmlNotepad_hndwmj480pefj
 - Architecture: neutral
+  InstallerType: zip
+  NestedInstallerType: wix
+  NestedInstallerFiles:
+  - RelativeFilePath: XmlNotepadSetup.msi
   InstallerUrl: https://github.com/microsoft/XmlNotepad/releases/download/2.9.0.18/XmlNotepadSetup.zip
-  InstallerSha256: 5D167DB2AD9E1D09696BCDC428023C228A8D28E337FEBEF00E8EECE0DA478186
+  InstallerSha256: 9F51589192BD5C9EE33736B3F8A8FA47B2571391F54A6F28A6D581E6366C4BF7
+  InstallerSwitches:
+    InstallLocation: APPINSTALLROOTDIR="<INSTALLPATH>"
+  ProductCode: '{4D7EAB34-D22B-4B5A-AD0E-BBBE22853708}'
+  AppsAndFeaturesEntries:
+  - Publisher: Lovett Software
+    ProductCode: '{4D7EAB34-D22B-4B5A-AD0E-BBBE22853708}'
+    UpgradeCode: '{14C1B5E8-3198-4AF2-B4BC-351017A109D3}'
 ManifestType: installer
 ManifestVersion: 1.12.0
