--- a/manifests/s/Stellarium/Stellarium/25.4/Stellarium.Stellarium.installer.yaml
+++ b/manifests/s/Stellarium/Stellarium/25.4/Stellarium.Stellarium.installer.yaml
@@ -24,5 +24,19 @@ Installers:
   InstallerSha256: 7628A371C88D74FF56980B00F100BEEF60A18ACED23DB5CA8CD7CE7679C3DC9F
   InstallerSwitches:
     Custom: /ALLUSERS
+- Architecture: arm64
+  Scope: user
+  InstallerUrl: https://github.com/Stellarium/stellarium/releases/download/v25.4/stellarium-25.4-qt6-arm64.exe
+  InstallerSha256: 7A601EE438985FF474ACEEA612D52E74AC3930EC7FEB15E2BFC5A7EFBADA60CB
+  InstallerSwitches:
+    Custom: /CURRENTUSER
+- Architecture: arm64
+  Scope: machine
+  InstallerUrl: https://github.com/Stellarium/stellarium/releases/download/v25.4/stellarium-25.4-qt6-arm64.exe
+  InstallerSha256: 7A601EE438985FF474ACEEA612D52E74AC3930EC7FEB15E2BFC5A7EFBADA60CB
+  InstallerSwitches:
+    Custom: /ALLUSERS
+  InstallationMetadata:
+    DefaultInstallLocation: '%ProgramFiles%\Stellarium'    
 ManifestType: installer
 ManifestVersion: 1.10.0
