--- a/manifests/c/Creality/CrealityScan/4/1.6.15/Creality.CrealityScan.4.installer.yaml
+++ b/manifests/c/Creality/CrealityScan/4/1.6.15/Creality.CrealityScan.4.installer.yaml
@@ -3,7 +3,8 @@
 
 PackageIdentifier: Creality.CrealityScan.4
 PackageVersion: 1.6.15
-InstallerType: inno
+InstallerType: zip
+NestedInstallerType: inno
 NestedInstallerFiles:
 - RelativeFilePath: CrealityScan_4_win_1.6.15.exe
 Scope: machine
