--- a/manifests/s/SQLite/SQLite/3.51.2/SQLite.SQLite.installer.yaml
+++ b/manifests/s/SQLite/SQLite/3.51.2/SQLite.SQLite.installer.yaml
@@ -1,5 +1,5 @@
-# Created with komac v2.14.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
+# Created using wingetcreate 1.10.3.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: SQLite.SQLite
 PackageVersion: 3.51.2
@@ -14,13 +14,12 @@ NestedInstallerFiles:
   PortableCommandAlias: sqlite3_analyzer
 - RelativeFilePath: sqlite3_rsync.exe
   PortableCommandAlias: sqlite3_rsync
-ReleaseDate: 2026-01-09
 Installers:
 - Architecture: x64
   InstallerUrl: https://www.sqlite.org/2026/sqlite-tools-win-x64-3510200.zip
-  InstallerSha256: 4F37B51322F1E15F85E451DAAECAA5EB28296BFA6523FDDA1B4042638E89E410
+  InstallerSha256: 042805D77076E2B806C86B1AC4082D65C2F2D4BDEF5CE8995EED7845878FD69F
 - Architecture: arm64
   InstallerUrl: https://www.sqlite.org/2026/sqlite-tools-win-arm64-3510200.zip
   InstallerSha256: F1399231B07D43121F0C1F625F5824606934CB95752B9B84F8E53D870A816F29
 ManifestType: installer
-ManifestVersion: 1.12.0
+ManifestVersion: 1.10.0
