--- a/manifests/s/SQLite/SQLite/3.51.2/SQLite.SQLite.locale.en-US.yaml
+++ b/manifests/s/SQLite/SQLite/3.51.2/SQLite.SQLite.locale.en-US.yaml
@@ -1,5 +1,5 @@
-# Created with komac v2.14.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
+# Created using wingetcreate 1.10.3.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: SQLite.SQLite
 PackageVersion: 3.51.2
@@ -26,4 +26,4 @@ Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://sqlite.org/faq.html
 ManifestType: defaultLocale
-ManifestVersion: 1.12.0
+ManifestVersion: 1.10.0
