Add dependencies section to installer manifest
Added package dependency for Microsoft Visual C++ Redistributable.

--- a/manifests/d/dongdongbh/Mindwtr/0.5.3/dongdongbh.Mindwtr.installer.yaml
+++ b/manifests/d/dongdongbh/Mindwtr/0.5.3/dongdongbh.Mindwtr.installer.yaml
@@ -15,9 +15,13 @@ ProductCode: Mindwtr
 ReleaseDate: 2026-01-13
 AppsAndFeaturesEntries:
 - ProductCode: Mindwtr
+Dependencies:
+  PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/dongdongbh/Mindwtr/releases/download/v0.5.3/Mindwtr_0.5.3_x64-setup.exe
   InstallerSha256: 9AC7C1DCDCAF9644626B2F711BD2DF07F557D91E34CDBCC77584C073904D9C85
 ManifestType: installer
 ManifestVersion: 1.10.0
+
