Update CapFrameX installer with dependencies and architecture
Added dependencies for Microsoft.DotNet.Runtime.9 and changed architecture from x64 to x86.

--- a/manifests/c/CXWorld/CapFrameX/1.7.9.3/CXWorld.CapFrameX.installer.yaml
+++ b/manifests/c/CXWorld/CapFrameX/1.7.9.3/CXWorld.CapFrameX.installer.yaml
@@ -7,8 +7,10 @@ InstallerLocale: en-US
 InstallerType: zip
 UpgradeBehavior: install
 ReleaseDate: 2026-01-09
+Dependencies:
+- PackageDependencies: Microsoft.DotNet.Runtime.9
 Installers:
-- Architecture: x64
+- Architecture: x86
   NestedInstallerType: burn
   NestedInstallerFiles:
   - RelativeFilePath: CapFrameXBootstrapper.exe
@@ -32,3 +34,4 @@ Installers:
   ArchiveBinariesDependOnPath: true
 ManifestType: installer
 ManifestVersion: 1.10.0
+
