Revise CapFrameX installer for version 1.8.0.1
Updated installer configuration for CapFrameX Beta.

--- a/manifests/c/CXWorld/CapFrameX/Beta/1.8.0.1/CXWorld.CapFrameX.Beta.installer.yaml
+++ b/manifests/c/CXWorld/CapFrameX/Beta/1.8.0.1/CXWorld.CapFrameX.Beta.installer.yaml
@@ -8,9 +8,11 @@ InstallerType: zip
 UpgradeBehavior: install
 ReleaseDate: 2026-01-12
 Dependencies:
-- PackageDependencies: Microsoft.DotNet.Runtime.9
+  PackageDependencies: 
+  - PackageIdentifier: Microsoft.DotNet.Runtime.9
+  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 Installers:
-- Architecture: x86
+- Architecture: x64
   NestedInstallerType: burn
   NestedInstallerFiles:
   - RelativeFilePath: CapFrameXBootstrapper.exe
@@ -22,8 +24,6 @@ Installers:
     ProductCode: '{7f553aac-86ae-4287-badd-58159c5fb202}'
     UpgradeCode: '{D124F3FF-D15F-4B43-BD0D-CD631DD931DA}'
     InstallerType: burn
-  InstallationMetadata:
-    DefaultInstallLocation: '%ProgramFiles(x86)%\CapFrameX'
 - Architecture: neutral
   NestedInstallerType: portable
   NestedInstallerFiles:
@@ -34,4 +34,5 @@ Installers:
   ArchiveBinariesDependOnPath: true
 ManifestType: installer
 ManifestVersion: 1.10.0
+
 
