Refactor CapFrameX installer YAML structure

--- a/manifests/c/CXWorld/CapFrameX/1.7.9.3/CXWorld.CapFrameX.installer.yaml
+++ b/manifests/c/CXWorld/CapFrameX/1.7.9.3/CXWorld.CapFrameX.installer.yaml
@@ -8,7 +8,8 @@ InstallerType: zip
 UpgradeBehavior: install
 ReleaseDate: 2026-01-09
 Dependencies:
-- PackageDependencies: Microsoft.DotNet.Runtime.9
+  PackageDependencies: 
+  - PackageIdentifier: Microsoft.DotNet.Runtime.9
 Installers:
 - Architecture: x86
   NestedInstallerType: burn
@@ -34,4 +35,5 @@ Installers:
   ArchiveBinariesDependOnPath: true
 ManifestType: installer
 ManifestVersion: 1.10.0
+
 
