--- a/manifests/s/SMPlayer/SMPlayer/25.6.0/SMPlayer.SMPlayer.installer.yaml
+++ b/manifests/s/SMPlayer/SMPlayer/25.6.0/SMPlayer.SMPlayer.installer.yaml
@@ -1,5 +1,4 @@
-# Created with komac v2.11.2
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
+﻿#yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: SMPlayer.SMPlayer
 PackageVersion: 25.6.0
@@ -39,7 +38,7 @@ Installers:
   InstallerUrl: https://github.com/smplayer-dev/smplayer/releases/download/v25.6.0/smplayer-25.6.0-win32-qt5.6-unsigned.exe
   InstallerSha256: E19FF69C5D4083C852381502A98E06FCAB672F0BB256F03363333E0EFFDC12EB
   AppsAndFeaturesEntries:
-  - DisplayName: SMPlayer 25.6.0
+  - DisplayName: SMPlayer (x86)
     ProductCode: SMPlayer
   InstallationMetadata:
     DefaultInstallLocation: '%ProgramFiles(x86)%\SMPlayer'
@@ -47,9 +46,9 @@ Installers:
   InstallerUrl: https://github.com/smplayer-dev/smplayer/releases/download/v25.6.0/smplayer-25.6.0-x64-unsigned.exe
   InstallerSha256: E7A95741331B575DD457F3EDD0543BA6E1C056777F65382223A259DA2C3286EF
   AppsAndFeaturesEntries:
-  - DisplayName: SMPlayer 25.6.0 (x64)
+  - DisplayName: SMPlayer (x64)
     ProductCode: SMPlayer
   InstallationMetadata:
     DefaultInstallLocation: '%ProgramFiles%\SMPlayer'
 ManifestType: installer
-ManifestVersion: 1.9.0
+ManifestVersion: 1.12.0
