--- a/manifests/s/SMPlayer/SMPlayer/25.6.0/SMPlayer.SMPlayer.locale.en-US.yaml
+++ b/manifests/s/SMPlayer/SMPlayer/25.6.0/SMPlayer.SMPlayer.locale.en-US.yaml
@@ -1,5 +1,4 @@
-# Created with komac v2.11.2
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
+﻿#yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: SMPlayer.SMPlayer
 PackageVersion: 25.6.0
@@ -11,15 +10,13 @@ PrivacyUrl: https://www.smplayer.info/en/privacy-policy
 Author: Ricardo Villalba
 PackageName: SMPlayer
 PackageUrl: https://www.smplayer.info/
-License: GPL-2.0
+License: GPLv2
 LicenseUrl: https://raw.githubusercontent.com/smplayer-dev/smplayer/master/Copying.txt
-Copyright: Copyright © 1989, 1991 Free Software Foundation, Inc.
+Copyright: © 1989, 1991 Free Software Foundation, Inc.
 CopyrightUrl: https://raw.githubusercontent.com/smplayer-dev/smplayer/master/Copying.txt
-ShortDescription: Free Media Player for Windows and Linux with Youtube support.
+ShortDescription: Free media player for Windows with YouTube support.
 Description: |-
-  SMPlayer is a free media player for Windows and Linux with built-in codecs that can play virtually all video and audio formats.
-  It doesn't need any external codecs.
-  Just install SMPlayer and you'll be able to play all formats without the hassle to find and install codec packs."
+  SMPlayer is a free media player for Windows and Linux with built-in codecs that can play virtually all video and audio formats. It doesn't need any external codecs. Just install SMPlayer and you'll be able to play all formats without the hassle to find and install codec packs.
 Moniker: smplayer
 Tags:
 - audio
@@ -44,4 +41,4 @@ ReleaseNotes: |-
   - Various bug fixes and stability improvements.
 ReleaseNotesUrl: https://github.com/smplayer-dev/smplayer/releases/tag/v25.6.0
 ManifestType: defaultLocale
-ManifestVersion: 1.9.0
+ManifestVersion: 1.12.0
