--- a/manifests/i/IgorPavlov/7-max/24.01/IgorPavlov.7-max.installer.yaml
+++ b/manifests/i/IgorPavlov/7-max/24.01/IgorPavlov.7-max.installer.yaml
@@ -14,5 +14,7 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://7-max.com/a/7max2401.exe
   InstallerSha256: 1B3633E0FD0F901B02FDE168DE254856A37DB602C25D3646BFB42DB8ECBF6D8C
+AppsAndFeaturesEntries:
+- DisplayName: 7-max
 ManifestType: installer
 ManifestVersion: 1.12.0
