Added DisplayName-s：voidtools.Everything version 1.4.1.1030

--- a/manifests/v/voidtools/Everything/1.4.1.1030/voidtools.Everything.installer.yaml
+++ b/manifests/v/voidtools/Everything/1.4.1.1030/voidtools.Everything.installer.yaml
@@ -1,4 +1,4 @@
-﻿#yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
+#yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: voidtools.Everything
 PackageVersion: 1.4.1.1030
@@ -14,6 +14,8 @@ Installers:
   InstallerSha256: 59EAFA8AE9446EFA1B0AA1CE167B9F952B6B1C8D3EC9EDBAE1C8D252BBDD383B
   InstallerSwitches:
     InstallLocation: INSTALLDIR="<INSTALLPATH>"
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything (x86)
   ProductCode: '{8DEE7A0F-EA0F-4F60-851D-BF9CB33163C4}'
 - Architecture: x64
   InstallerType: wix
@@ -23,31 +25,41 @@ Installers:
   InstallerSwitches:
     InstallLocation: INSTALLDIR="<INSTALLPATH>"
   ProductCode: '{79500D03-9E5C-4E84-8217-0910221AD5D2}'
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything (x64)
 - Architecture: x86
   InstallerType: nullsoft
   Scope: machine
   InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.x86-Setup.exe
   InstallerSha256: 6714CD251BEB7416CC684D0715E93EC79A12452EFE71769EA8F5438295627FDF
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything (x86)
 - Architecture: x64
   InstallerType: nullsoft
   Scope: machine
   InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.x64-Setup.exe
   InstallerSha256: 553FD2477E830F686D140D8E7FF79FC3D69239A754C85BE4CF7E45A625A50396
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything (x64)
 - Architecture: arm
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM.zip
-  InstallerSha256: 4173d7e128ff39737302884383afd9122afb4b26469304aea8312dad3840bd8c
+  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM.en-US.zip
+  InstallerSha256: 20B4A9A34E852A90619DD31BBE756DC9759A38AFC1726B3F08C9E7B7B1D85738
   InstallerType: zip
   NestedInstallerType: portable
   NestedInstallerFiles:
   - RelativeFilePath: EverythingARM.exe
     PortableCommandAlias: EverythingARM
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything (ARM32)
 - Architecture: arm64
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM64.zip
-  InstallerSha256: 3f5c7fc440102b99c2d3cd8afc2ccca67f0b948d3288ec795fed6f680f677545
+  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM64.en-US.zip
+  InstallerSha256: 3ca04e1c8297f91d4d8504f0c07130597b0aa2334f8e1eabbf5f778302e7fdcd
   InstallerType: zip
   NestedInstallerType: portable
   NestedInstallerFiles:
-  - RelativeFilePath: EverythingARM64.exe
-    PortableCommandAlias: EverythingARM64
+  - RelativeFilePath: EverythingARM.exe
+    PortableCommandAlias: EverythingARM
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything (ARM64)
 ManifestType: installer
 ManifestVersion: 1.12.0
