Update the description and support link

--- a/manifests/n/Nethermind/Nethermind/1.36.0/Nethermind.Nethermind.locale.en-US.yaml
+++ b/manifests/n/Nethermind/Nethermind/1.36.0/Nethermind.Nethermind.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 1.36.0
 PackageLocale: en-US
 Publisher: Demerzel Solutions Limited
 PublisherUrl: https://nethermind.io
-PublisherSupportUrl: https://discord.com/invite/PaCMRFdvWT
+PublisherSupportUrl: https://discord.gg/GXJFaYk
 PrivacyUrl: https://nethermind.io/legal
 Author: Demerzel Solutions Limited
 PackageName: Nethermind
@@ -16,11 +16,9 @@ LicenseUrl: https://spdx.org/licenses/LGPL-3.0-only.html
 Copyright: 2023 Demerzel Solutions Limited
 ShortDescription: A robust execution client for Ethereum node operators.
 Description: |-
-  Nethermind is a high-performance, highly configurable full Ethereum protocol execution client built on .
-  NET that runs on Linux, Windows, and macOS and supports Clique, Aura, and Ethash.
-  Nethermind offers very fast sync speeds and support for external plugins.
-  Enjoy reliable access to rich on-chain data thanks to high-performance JSON-RPC based on the Kestrel web server.
-  Healthy node monitoring is secured with Grafana analytics and Seq logging.
+  The Nethermind Ethereum execution client, built on .NET, delivers industry-leading performance in syncing and tip-of-chain processing.
+  With its modular design and plugin system, it offers extensibility and features for new chains.
+  As one of the most adopted execution clients on Ethereum, Nethermind plays a crucial role in enhancing the diversity and resilience of the Ethereum ecosystem.
 Moniker: nethermind
 Tags:
 - blockchain
@@ -29,3 +27,4 @@ Tags:
 ReleaseNotesUrl: https://github.com/NethermindEth/nethermind/releases/tag/1.36.0
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
