--- a/manifests/v/voidtools/Everything/1.4.1.1030/voidtools.Everything.installer.yaml
+++ b/manifests/v/voidtools/Everything/1.4.1.1030/voidtools.Everything.installer.yaml
@@ -42,8 +42,8 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Everything (x64)
 - Architecture: arm
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM.en-US.zip
-  InstallerSha256: 20B4A9A34E852A90619DD31BBE756DC9759A38AFC1726B3F08C9E7B7B1D85738
+  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM.zip
+  InstallerSha256: 4173d7e128ff39737302884383afd9122afb4b26469304aea8312dad3840bd8c
   InstallerType: zip
   NestedInstallerType: portable
   NestedInstallerFiles:
@@ -52,8 +52,8 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Everything (ARM32)
 - Architecture: arm64
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM64.en-US.zip
-  InstallerSha256: 3ca04e1c8297f91d4d8504f0c07130597b0aa2334f8e1eabbf5f778302e7fdcd
+  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1030.ARM64.zip
+  InstallerSha256: 3f5c7fc440102b99c2d3cd8afc2ccca67f0b948d3288ec795fed6f680f677545
   InstallerType: zip
   NestedInstallerType: portable
   NestedInstallerFiles:
