--- a/manifests/v/voidtools/Everything/1.4.1.1030/voidtools.Everything.installer.yaml
+++ b/manifests/v/voidtools/Everything/1.4.1.1030/voidtools.Everything.installer.yaml
@@ -57,8 +57,8 @@ Installers:
   InstallerType: zip
   NestedInstallerType: portable
   NestedInstallerFiles:
-  - RelativeFilePath: EverythingARM.exe
-    PortableCommandAlias: EverythingARM
+  - RelativeFilePath: EverythingARM64.exe
+    PortableCommandAlias: EverythingARM64
   AppsAndFeaturesEntries:
   - DisplayName: Everything (ARM64)
 ManifestType: installer
