Added DisplayName: MHNexus.HxD version 2.5

--- a/manifests/m/MHNexus/HxD/2.5/MHNexus.HxD.installer.yaml
+++ b/manifests/m/MHNexus/HxD/2.5/MHNexus.HxD.installer.yaml
@@ -18,5 +18,7 @@ Installers:
   - RelativeFilePath: .\HxDSetup.exe
   InstallerUrl: https://mh-nexus.de/downloads/HxDSetup.zip
   InstallerSha256: 5065041C7B03C24B9533A5B32B33DB58F2B4924CD84BED41834FF2DB51C1CB7C
+AppsAndFeaturesEntries:
+- DisplayName: HxD Hex Editor
 ManifestType: installer
 ManifestVersion: 1.10.0
