Added DisplayName：Microsoft.VisualStudio.2022.BuildTools version 17.14.23

--- a/manifests/m/Microsoft/VisualStudio/2022/BuildTools/17.14.23/Microsoft.VisualStudio.2022.BuildTools.installer.yaml
+++ b/manifests/m/Microsoft/VisualStudio/2022/BuildTools/17.14.23/Microsoft.VisualStudio.2022.BuildTools.installer.yaml
@@ -89,5 +89,7 @@ Installers:
   Scope: machine
   InstallerUrl: https://download.visualstudio.microsoft.com/download/pr/a80deb24-6a28-4d30-b99f-13b6e89c9727/5439781a4deb7951895e041d3d0a5b409034ad56070e5fc5576dda2e0e364faa/vs_BuildTools.exe
   InstallerSha256: 5439781a4deb7951895e041d3d0a5b409034ad56070e5fc5576dda2e0e364faa
+AppsAndFeaturesEntries:
+- DisplayName: Visual Studio Build Tools 2022
 ManifestType: installer
 ManifestVersion: 1.9.0
