Added DisplayName: Nvidia.FrameView version 1.6

--- a/manifests/n/Nvidia/FrameView/1.6/Nvidia.FrameView.installer.yaml
+++ b/manifests/n/Nvidia/FrameView/1.6/Nvidia.FrameView.installer.yaml
@@ -15,5 +15,7 @@ Installers:
 - Architecture: neutral
   InstallerUrl: https://images.nvidia.com/content/geforce/technologies/frameview/FrameView_1.6/FrameViewSetup.exe
   InstallerSha256: 70A117DC6095ACEDAE5357353D7EA37B180D7C0E51D9675BE345F280629CB57B
+AppsAndFeaturesEntries:
+- DisplayName: NVIDIA FrameView
 ManifestType: installer
 ManifestVersion: 1.9.0
