Changed the DisplayName：joncampbell123.DOSBox-X version 2026.01.02

--- a/manifests/j/joncampbell123/DOSBox-X/2026.01.02/joncampbell123.DOSBox-X.installer.yaml
+++ b/manifests/j/joncampbell123/DOSBox-X/2026.01.02/joncampbell123.DOSBox-X.installer.yaml
@@ -13,7 +13,7 @@ Commands:
 - dosbox-x
 ProductCode: '{63E5D76D-0092-415C-B97C-E0D2F4F6D2EC}_is1'
 AppsAndFeaturesEntries:
-- DisplayName: DOSBox-X 2026.01.02 (32/64bit for Windows)
+- DisplayName: DOSBox-X (32/64bit)
   Publisher: joncampbell123 [DOSBox-X Team]
   DisplayVersion: 2026.01.02 (32/64bit for Windows)
   ProductCode: '{63E5D76D-0092-415C-B97C-E0D2F4F6D2EC}_is1'
@@ -34,4 +34,3 @@ Installers:
 ManifestType: installer
 ManifestVersion: 1.10.0
 ReleaseDate: 2026-01-03
-
