--- a/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.installer.yaml
+++ b/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.installer.yaml
@@ -21,4 +21,4 @@ Installers:
   InstallerSha256: 0127A446EEC619C721614DC65FC4B82585D8F9B68D87902F9247409A8D4B15D1
 ManifestType: installer
 ManifestVersion: 1.10.0
-
+ReleaseDate: 2026-01-13
