--- a/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.locale.en-US.yaml
+++ b/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.locale.en-US.yaml
@@ -16,6 +16,7 @@ Tags:
 - bandwidth
 - calculator
 - utility
+ReleaseNotesUrl: https://github.com/bryancandi/WinGet-Releases/releases/tag/BandwidthCalculator-1.2.0
 Documentations:
 - DocumentLabel: Wiki
   DocumentUrl: https://github.com/bryancandi/WinGet-Releases/wiki
