Now we're talking.

--- a/manifests/m/Microsoft/DotNet/Runtime/2_2/2.2.8.28209/Microsoft.DotNet.Runtime.2_2.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Runtime/2_2/2.2.8.28209/Microsoft.DotNet.Runtime.2_2.installer.yaml
@@ -4,13 +4,13 @@ PackageIdentifier: Microsoft.DotNet.Runtime.2_2
 PackageVersion: 2.2.8.28209
 Installers:
 - Architecture: x64
-  InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/Runtime/2.2.8/dotnet-runtime-2.2.8-win-x64.exe
-  InstallerSha256: 502667FB4E619C1218466C8121F42FB57162E6AE8D2D43B3074D93D0EEDBC591
-  InstallerType: burn
+  InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/Runtime/2.2.8/dotnet-runtime-2.2.8-win-x64.msi
+  InstallerSha256: 806c50b31e8b9c9b86f9addf0fddf86372086edf168d5caa04cf6fabfaacd4e5
+  InstallerType: msi
 - Architecture: x86
-  InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/Runtime/2.2.8/dotnet-runtime-2.2.8-win-x86.exe
-  InstallerSha256: 7d1c3b8d03cc31204decfc04e1a5357f42487b413494803a0017ad5fb7c85b51
-  InstallerType: burn
+  InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/Runtime/2.2.8/dotnet-runtime-2.2.8-win-x86.msi
+  InstallerSha256: 7c77f02166658990379c41770ade153ce3721a88de131eb51a036a0033c45b74
+  InstallerType: msi
 - Architecture: arm64
   InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/Runtime/2.2.8/dotnet-runtime-2.2.8-win-arm64.zip
   InstallerSha256: d0bc49253c1a061e9e083c0b25247c80e1cc45b99fadb1ca1d754723cbbf5c46
