Fix installer manifest for EXE compliance

--- a/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.installer.yaml
+++ b/manifests/s/shikhar/seleniuminit/1.0.0/shikhar.seleniuminit.installer.yaml
@@ -1,13 +1,11 @@
 PackageIdentifier: shikhar.seleniuminit
 PackageVersion: 1.0.0
-InstallerType: ps1
-InstallModes:
-  - silent
+InstallerType: exe
+
 Installers:
   - Architecture: x64
-    InstallerUrl: https://github.com/shikhar-batham/selenium-init-cli/releases/download/v1.0.0/install.ps1
-    InstallerSha256: 2A7AA091CA3658D02A0B7C0FAA77524E3DEBBCEDE6F6B1DCA314DADE16154A9
-    InstallerSwitches:
-      Silent: -NoProfile -ExecutionPolicy Bypass -File install.ps1
+    InstallerUrl: https://github.com/shikhar-batham/selenium-init-cli/releases/download/v1.0.0/selenium-init-installer.exe
+    InstallerSha256: 61A8F7E6618974E6099E0520CCCFE787410769E777DD5AC3CADF67FFA393DCF8
+
 ManifestType: installer
 ManifestVersion: 1.10.0
