--- a/manifests/d/DanielPalme/ReportGenerator/5.5.1/DanielPalme.ReportGenerator.installer.yaml
+++ b/manifests/d/DanielPalme/ReportGenerator/5.5.1/DanielPalme.ReportGenerator.installer.yaml
@@ -11,17 +11,17 @@ Installers:
   - RelativeFilePath: net10.0\ReportGenerator.exe
     PortableCommandAlias: reportgenerator
   - RelativeFilePath: net8.0\ReportGenerator.exe
-    PortableCommandAlias: reportgenerator-net8
+    PortableCommandAlias: reportgeneratornet8
   - RelativeFilePath: net9.0\ReportGenerator.exe
-    PortableCommandAlias: reportgenerator-net9
+    PortableCommandAlias: reportgeneratornet9
   - RelativeFilePath: net47\ReportGenerator.exe
-    PortableCommandAlias: reportgenerator-net4
+    PortableCommandAlias: reportgeneratornet4
   InstallerUrl: https://github.com/danielpalme/ReportGenerator/releases/download/v5.5.1/ReportGenerator_5.5.1.zip
   InstallerSha256: 12495B33A45BC035EB93D1B5658759FFC2C13A03671FB9EB271C4A35C7EA7CB0
 - Architecture: x86
   NestedInstallerFiles:
   - RelativeFilePath: net47\ReportGenerator.exe
-    PortableCommandAlias: reportgenerator-net4
+    PortableCommandAlias: reportgeneratornet4
   InstallerUrl: https://github.com/danielpalme/ReportGenerator/releases/download/v5.5.1/ReportGenerator_5.5.1.zip
   InstallerSha256: 12495B33A45BC035EB93D1B5658759FFC2C13A03671FB9EB271C4A35C7EA7CB0
 ManifestType: installer
